# fopro_parser

./: CMakeLists.txt  README.md
fopro_parser/: CMakeLists.txt  csv.cpp  csv.h  fopro.cpp  fopro.h  fopro_parser.cpp  fopro_parser.h  main.cpp  utils.cpp  utils.h
